--- a/src/components/atoms/Tile/index.module.scss
+++ b/src/components/atoms/Tile/index.module.scss
@@ -1,63 +1,32 @@
-.tile {
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  background: #cfffc0;
+  width: 24px;
+  height: 24px;
   cursor: pointer;
+  font-size: 24px;
+  background: #c0c0c0;
+  border: 2px outset #ececec;
   font-weight: bold;
 
-  &.isWeak {
-    &.isRevealed {
-      background: #fff5bb;
-    }
-
-    background: #d8ffcd;
+  &:disabled {
+    background: #c0c0c0;
+    border-color: transparent;
+    cursor: default;
+    color: inherit;
   }
 
-  &:hover:not(&.isRevealed) {
-    background: #a9f092;
-    opacity: 1;
+  &:active:not(:disabled) {
+    border: 2px inset #ececec;
   }
 
-  &.isRevealed {
-    background: #fff3a9;
+  &.size28 {
+    font-size: 16px;
   }
 
-  &.danger {
-    background: #ff7784;
+  &.size32 {
+    font-size: 24px;
   }
-}
 
-.boom {
-  -webkit-animation: boom 0.3s linear infinite both;
-  animation: boom 0.3s linear infinite both;
-}
-
-@keyframes boom {
-  0% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
-  20% {
-    -webkit-transform: translate(-2px, 2px);
-    transform: translate(-2px, 2px);
-  }
-  40% {
-    -webkit-transform: translate(-2px, -2px);
-    transform: translate(-2px, -2px);
-  }
-  60% {
-    -webkit-transform: translate(2px, 2px);
-    transform: translate(2px, 2px);
-  }
-  80% {
-    -webkit-transform: translate(2px, -2px);
-    transform: translate(2px, -2px);
-  }
-  100% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
 }
