1. 게임 성공 시 무한루프로 빠지는 이슈 수정 2. body에 스크롤 생기는 이슈 수정 3. 성능 개선 (메모이제이션 추가)

--- a/src/components/pages/Home/index.module.scss
+++ b/src/components/pages/Home/index.module.scss
@@ -1,15 +1,18 @@
 .root {
+  position: relative;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
   min-width: 100vw;
-  padding-top: 40px;
 }
 
 .wrapper {
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   width: max-content;
-  margin: auto;
   background: #d4d0c8;
   border: 2px outset #ececec;
 }
